# YouTube-Content-Analyzer-AI

./: .gitattributes  .gitignore  CONTRIBUTING.md  MODEL_IMPLEMENTATION_SUMMARY.txt  README.md  TROUBLESHOOTING.md  analysis_cache.py  app.py  branches.txt  data_exploration_summary.txt  evaluate_and_explain.py  frontend_server.py  global_analyzer.py  package-lock.json  print_results.py  pyrightconfig.json  requirements.txt  results_dump.txt  start.bat  start_server.py  temp_pyright.txt  test_edge_cases.py
Category_Violence_Model/: .gitattributes  .gitignore  category_classification_main.py  pyproject.toml  start_server.py  violence_analyzer_main.py
Category_Violence_Model/api/: main.py
Category_Violence_Model/docs/: ARCHITECTURE_DIAGRAM.md  BACKEND_README.md  DYNAMIC_FRAMING_GUIDE.md  DYNAMIC_FRAMING_QUICKSTART.md  GETTING_STARTED.md  HOW_TO_ALWAYS_GET_IT_RIGHT.md  HOW_TO_UPDATE_DETECTORS.md  KEYWORD_QUICK_REFERENCE.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_TESTING_GUIDE.md  README.md  README_FINAL.md  README_KEYWORD_EXPANSION.md  USAGE_GUIDE.md  VIOLENCE_QUICK_REFERENCE.md
Category_Violence_Model/features/: X_test.npy  X_train.npy  X_train.npz  cat_vectorizer.pkl  num_scaler.pkl  target_encoder.pkl  tfidf_vectorizer.pkl  y_train.npy  y_val.npy
Category_Violence_Model/frontend/: dashboard.js  index.html  styles.css
Category_Violence_Model/models/: model_metadata.pkl  prediction_example.py  xgboost_metrics.pkl  yt_category_model.pkl
Category_Violence_Model/scratch/: test_category_model.py
Category_Violence_Model/scripts/: README.md  (+5 more)
(+109 files in other folders)
