[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "ffmpeg-python>=0.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.3",
]
